Fix for spacing and row - expense - forwarder

--- a/assets/css/customcss.css
+++ b/assets/css/customcss.css
@@ -95,13 +95,19 @@ table.table-striped tr {
 }
 
 table.table-striped tr td {
-	padding-top: 5px !important;
-	padding-bottom: 5px !important;
+	padding-top: 2px !important;
+	padding-bottom: 2px !important;
 	border: none !important;
 }
 
 table.table-striped tr td.actions {
 	display: inline-flex !important;
+}
+
+table.table-striped tr td.actions a,
+table.table-striped tr td.actions button {
+	padding: 5px !important;
+	align-self: center;
 }
 
 .paging-body {
